Collectors migration from PA-RCA (#17)
* Collectors from PA-RCA move.

Signed-off-by: Filip Drobnjakovic <drobnjakovicfilip@gmail.com>

* Rebase and unit tests.

Signed-off-by: Filip Drobnjakovic <drobnjakovicfilip@gmail.com>

---------

Signed-off-by: Filip Drobnjakovic <drobnjakovicfilip@gmail.com>