@@ -124,6 +124,11 @@ configurations.each {
 
 compileJava {
     dependsOn spotlessApply
+    JavaVersion targetVersion = JavaVersion.toVersion(targetCompatibility);
+    if (targetVersion.isJava9Compatible()) {
+        options.compilerArgs += ["--add-exports", "jdk.attach/sun.tools.attach=ALL-UNNAMED"]
+        options.compilerArgs += ["--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"]
+    }
 }
 
 test {
@@ -159,7 +164,9 @@ spotless {
 }
 
 tasks.withType(Test) {
+    jvmArgs('-Dopensearch.path.conf=config')
     jvmArgs('--add-opens=java.base/sun.nio.fs=ALL-UNNAMED')
+    jvmArgs('--add-opens=java.base/java.io=ALL-UNNAMED')
     jvmArgs('--add-opens=java.base/java.nio.file=ALL-UNNAMED')
     jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
     jvmArgs('--add-opens=java.base/java.util=ALL-UNNAMED')
